--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.12.3",
     "recoil": "^0.7.7",
+    "socket.io-client": "^4.7.5",
     "swiper": "^11.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
